--- a/ShoppingCart.Data/ShoppingCart.Data.csproj
+++ b/ShoppingCart.Data/ShoppingCart.Data.csproj
@@ -3,10 +3,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ShoppingCart.Common\ShoppingCart.Common.csproj" />
     <ProjectReference Include="..\ShoppingCart.Models\ShoppingCart.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0-preview1-final" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.0-preview1-26216-02" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.EntityFrameworkCore, Version=2.0.2.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
