--- a/ShoppingCart.Common/ShoppingCart.Common.csproj
+++ b/ShoppingCart.Common/ShoppingCart.Common.csproj
@@ -7,4 +7,7 @@
       <HintPath>..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\system.data.sqlclient\4.4.3\ref\netstandard2.0\System.Data.SqlClient.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0-preview1-final" />
+  </ItemGroup>
 </Project>
