--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "feather-icons": "^4.7.0",
+    "fs": "0.0.1-security",
     "helmet": "^3.1.0",
+    "ipfs-api": "^20.0.1",
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
+    "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
